--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,15 @@ os:
 julia:
   - release
   - nightly
+  - 0.3
 notifications:
-  email: false
+  email: true
 # uncomment the following lines to override the default test script
 #script:
 #  - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
 #  - julia --check-bounds=yes -e 'Pkg.clone(pwd()); Pkg.build("JFVM"); Pkg.test("JFVM"; coverage=true)'
+julia -e 'Pkg.clone(pwd())'
+julia -e 'Pkg.build("$name")'
+if [ -f test/runtests.jl ]; then
+  julia --check-bounds=yes -e 'Pkg.test("$name", coverage=true)'
+fi
