--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,8 @@ notifications:
 #script:
 #  - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
 #  - julia --check-bounds=yes -e 'Pkg.clone(pwd()); Pkg.build("JFVM"); Pkg.test("JFVM"; coverage=true)'
-julia -e 'Pkg.clone(pwd())'
-julia -e 'Pkg.build("$name")'
-if [ -f test/runtests.jl ]; then
-  julia --check-bounds=yes -e 'Pkg.test("$name", coverage=true)'
-fi
+#julia -e 'Pkg.clone(pwd())'
+#julia -e 'Pkg.build("$name")'
+#if [ -f test/runtests.jl ]; then
+  #julia --check-bounds=yes -e 'Pkg.test("$name", coverage=true)'
+#fi
