--- a/.travis.yml
+++ b/.travis.yml
@@ -3,21 +3,8 @@ os:
   - linux
   - osx
 julia:
-#  - 0.5
+  - 0.7
   - 1.0
-#  - 0.3
-#  - nightly
+  - nightly
 notifications:
   email: true
-#before_install:
-#  - sudo apt-get update -qq
-#  - sudo apt-get install mayavi2
-#uncomment the following lines to override the default test script
-script:
-  - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
-  - julia --check-bounds=yes -e 'Pkg.clone(pwd()); Pkg.build("JFVM"); Pkg.test("JFVM"; coverage=true)'
-#julia -e 'Pkg.clone(pwd())'
-#julia -e 'Pkg.build("$name")'
-#if [ -f test/runtests.jl ]; then
-  #julia --check-bounds=yes -e 'Pkg.test("$name", coverage=true)'
-#fi
