--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,9 @@
 name = "JFVM"
 uuid = "d32f81f0-000d-5c7c-8375-24efa40f8589"
 version = "1.0.4"
+
 [deps]
+FFTW = "7a1cc6ca-52ef-59f5-83cd-3a7055c09341"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 
 [compat]
